--- a/index.html
+++ b/index.html
@@ -17,7 +17,43 @@
   </head>
   <body>
     <div class="container">
+      <div class="tic-tac-toe">
+        <div class="board">
+          <div class="row top">
+            <div class="square">
 
+            </div>
+            <div class="square">
+
+            </div>
+            <div class="square">
+
+            </div>
+          </div>
+          <div class="row middle">
+            <div class="square">
+
+            </div>
+            <div class="square">
+
+            </div>
+            <div class="square">
+
+            </div>
+          </div>
+          <div class="row bottom">
+            <div class="square">
+
+            </div>
+            <div class="square">
+
+            </div>
+            <div class="square">
+
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
